--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,8 @@ h2 {
 
 button {
   padding: 0.25rem 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
   font-family: inherit;
   border: none;
   cursor: pointer;
@@ -91,6 +93,8 @@ input {
   transition: all 0.2s;
   width: 100%;
 }
+
+
 
 input:focus {
   outline: none;
